--- a/css/exercice.css
+++ b/css/exercice.css
@@ -5,6 +5,10 @@
 }
 
 /* 2. exercice-baseline-2 */
+.exercice-baseline-2 .container-small {
+  display: flex;
+  align-items: baseline;
+}
 
 /* 3. exercice-baseline-3 */
 
