--- a/css/exercice.css
+++ b/css/exercice.css
@@ -11,6 +11,12 @@
 }
 
 /* 3. exercice-baseline-3 */
+.exercice-baseline-3 .container-small {
+  display: flex;
+  align-items: baseline;
+  align-items: center;
+  justify-content: center;
+}
 
 /* 4. exercice-flow-1 */
 
