--- a/css/exercice.css
+++ b/css/exercice.css
@@ -19,6 +19,10 @@
 }
 
 /* 4. exercice-flow-1 */
+.exercice-flow-1 .container-set {
+  display: flex;
+  flex-flow: row wrap;
+}
 
 /* 5. exercice-flow-2 */
 
