--- a/css/exercice.css
+++ b/css/exercice.css
@@ -25,6 +25,10 @@
 }
 
 /* 5. exercice-flow-2 */
+.exercice-flow-2 .container-small {
+  display: flex;
+  flex-flow: row wrap;
+}
 
 /* 6. exercice-all-in-1 */
 
