--- a/css/exercice.css
+++ b/css/exercice.css
@@ -41,3 +41,20 @@
 }
 
 /* 7. exercice-all-in-2 */
+.exercice-all-in-2 .container-small {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  align-content: center;
+}
+
+.exercice-all-in-2 .element-pink{
+  order: 1;
+}
+
+.exercice-all-in-2 .element-pink,
+.exercice-all-in-2 .element-blue {
+  flex-grow: 1;
+}
+
+
